--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"dotenv": "^16.0.3",
+		"moment": "^2.29.4",
 		"node-sass": "^8.0.0",
 		"openai": "^3.1.0",
 		"react": "^18.2.0",
